Fixing tabel overflow

--- a/scss/components/_admin.scss
+++ b/scss/components/_admin.scss
@@ -6,3 +6,7 @@
         margin-bottom: 20px;
     }
 }
+
+.adm-tabel {
+    overflow-x: scroll;
+}
